Fix current location display not showing when user has access to only one location

--- a/ui/app/css/map.css
+++ b/ui/app/css/map.css
@@ -151,6 +151,7 @@ body {
     max-width: 240px;
     overflow: hidden;
     display: inline-block;
+    white-space: nowrap;
 }
 
 .current-location-display .current-location-display-agency:before {
